tests/pos/wildcard-type-syntax.scala
//> using options -Werror

def test =
  Seq() match
    case _: List[_] =>
    case _: Seq[?] =>
