tests/neg/experimental-message-experimental-flag/Lib_1.scala
//> using options -Yno-experimental -experimental

def f() = ???
